[수정] 테이블 연동 및 출력 테스트 완료

--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -146,6 +146,15 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <table>
+        <tbody>
+          {% for assetstatus in assetStatus %}
+            <tr>{{ assetstatus.name }}</tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
   </div>
   
   <!-- Scrollable modal -->
